test/Fail/Issue1209-2.err
Issue1209-2.agda:22.1-23.26: error: [TerminationIssue]
Termination checking failed for the following function:
  iter
Problematic call:
  iter (♭ t)
    (at Issue1209-2.agda:23.16-20)
